# prompt-learner

./: README.html  README.md  main.py  mkdocs.yml  optimize_classifier.py  pyproject.toml  quick_start.py  script.md
cookbook/: anthropic_demo.py  classification_demo.py  grid_search_demo.py  loom_video.py  optimize_classifier.py  sql_generation.py  translator_demo.py
cookbook/empirical/: .gitignore  README.md  empiricalrc.json  main.py
data/: support_texts.csv  support_texts_test.csv
docs/: 404.html  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  _quarto.yml  getting-started.html  getting-started.qmd  index.html  index.qmd  install.html  install.qmd  reference.md  search.json  styles.css  why.html  why.qmd
docs/_site/: index.html
docs/concepts/: Adapters.html  Adapters.qmd  Architecture.html  Architecture.qmd  Selectors.html  Selectors.qmd  TasksExamples.html  TasksExamples.qmd  Templates.html  Templates.qmd
docs/contribute/: 01_environment.html  index.html
docs/tutorials/: getting_started.html  getting_started.qmd  grid_search.html  grid_search.qmd  optimize_customer_text_classifier.html  optimize_customer_text_classifier.qmd
prompt-learner/: README.md  pyproject.toml
prompt-learner/prompt_learner/: main.py
prompt_learner/: main.py
prompt_learner/adapters/: adapter.py  anthropic.py  openai.py
prompt_learner/prompts/: cot.py  prompt.py
prompt_learner/tasks/: classification.py  tagging.py  task.py
prompt_learner/templates/: anthropic_template.py  openai_template.py  template.py
prompt_learner/translator/: translate.py
(+10 files in other folders)
