[tool.poetry]
name = "prompt-learner"
version = "0.1.0"
description = ""
authors = ["Aditya Lahiri <adityalahiri13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
langchain-anthropic = "^0.1.4"
black = "^24.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
